--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			Zlcity.init_data(init_data)
 			
 			// 基本使用
-			new Zlcity('#ipt2')
+			new Zlcity(document.querySelector('#ipt2'))
 			
 			// 高级使用
 			new Zlcity('#ipt1', {
