--- a/index.html
+++ b/index.html
@@ -20,16 +20,43 @@
 	</head>
 
 	<body>
-		<input id="ipt1" value="上海@市辖区" style="margin-bottom: 100px;" />
-		<input id="ipt2" value="上海-市辖区" style="margin-bottom: 100px;" />
+		<input id="ipt1" value="上海@嘉定区" style="margin-bottom: 100px;" />
+		<input id="ipt2" value="上海-嘉定区" style="margin-bottom: 100px;" />
 		<script type="text/javascript" src="dist/city.min.js"></script>
 		<script>
 			const init_data = {
 				'热门城市': {
-					childs: [221,198],
+					// 北京 上海 深圳 天津 合肥 杭州 南京 哈尔滨 武汉 济南 大连 成都 三亚
+					childs: [1,2,200,3,73,62,49,101,169,134,27,253,234],
 					is_key: false
+				},
+				'ABCD': {
+					childs: ['2','9','11','12','16','18','27','28','30','31','40','45','47','52','75','80','82','86','87','90','92','96','100','106','113','138','147','149','155','184','190','193','213','215','216','223','228','232','238','241','242','244','246','247','250','252','253','257','267','269','271','277','280','286','291','295','296','299','303','307','313','318','326','347','348','349','350','356','359','362'],
+					is_key: true
+				},
+				'EFGH': {
+					childs: ['7','14','29','34','39','56','62','66','73','76','78','81','83','89','94','95','101','104','111','114','129','132','140','150','156','170','174','176','183','187','195','198','202','207','210','221','224','226','229','230','233','259','266','272','274','292','311','329','331','332','333','334','335','337','341','346','353'],
+					is_key: true
+				},
+				'JKLM': {
+					childs: ['13','19','21','24','25','32','35','41','43','55','65','68','72','77','85','103','108','110','121','124','126','130','134','141','145','146','148','152','158','159','162','175','196','203','205','208','217','220','231','245','248','249','256','258','262','264','273','275','283','288','290','298','304','315','316','317','324','327','328','344','351','352','357','364'],
+					is_key: true
+				},
+				'NOPQRS': {
+					childs: ['1','4','6','20','26','36','42','46','49','53','54','61','63','67','69','84','102','105','109','112','116','117','118','120','122','123','125','133','135','144','153','154','160','163','164','165','171','178','180','182','188','199','200','201','209','212','219','225','234','235','237','251','255','260','261','263','279','281','282','284','289','297','300','301','302','314','322','323','325','339','358'],
+					is_key: true
+				},
+				'TUVWX': {
+					childs: ['3','5','8','15','23','37','44','50','51','60','64','71','74','79','88','91','93','97','98','99','115','127','142','143','157','161','166','169','173','177','179','181','186','197','222','236','239','240','243','278','293','294','305','306','308','309','319','320','330','340','343','345','355','360','361','363'],
+					is_key: true
+				},
+				'YZ': {
+					childs: ['10','17','22','33','38','48','57','58','59','70','107','119','128','131','136','137','139','151','167','168','172','185','189','191','192','194','204','206','211','214','218','227','254','265','268','270','276','285','287','310','312','321','336','338','342','354'],
+					is_key:  true
 				}
 			}
+			
+			
 			Zlcity.init_data(init_data)
 			
 			// 基本使用
@@ -37,6 +64,10 @@
 			
 			// 高级使用
 			new Zlcity('#ipt1', {
+				/*
+				 * 可选层级
+				 */
+				//optional_index: 1,
 				/*修正控件位置
 				 * 基于ipt1
 				 */
@@ -54,11 +85,12 @@
 				set: function(is_ready,ids) {
 					const dom = this.dom;
 					if(!is_ready){
-						dom.dataset.abcd = ids.join('-');
+						dom.dataset.abcd = ids[ids.length - 1];
 						dom.value = this.fids_chinese(ids).join('@');
 					}else{ // 浏览器回退
 						const values = dom.value.split('@');
-						dom.dataset.abcd = this.ids(values).join('-')
+						const ids = this.ids(values);
+						dom.dataset.abcd = ids[ids.length - 1]
 					}
 				}
 			})
