新增menu指定样式

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 				'热门城市': {
 					// 北京 上海 深圳 天津 合肥 杭州 南京 哈尔滨 武汉 济南 大连 成都 三亚
 					childs: [1,2,200,3,73,62,49,101,169,134,27,253,234],
-					is_key: false
+					is_key: false,
+					className: 'hot'
 				},
 				'ABCD': {
 					childs: ['2','9','11','12','16','18','27','28','30','31','40','45','47','52','75','80','82','86','87','90','92','96','100','106','113','138','147','149','155','184','190','193','213','215','216','223','228','232','238','241','242','244','246','247','250','252','253','257','267','269','271','277','280','286','291','295','296','299','303','307','313','318','326','347','348','349','350','356','359','362'],
